# fathom

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml
docs/designs/: 2026-03-09.00.agent-prompt-context-and-execution-model.md  2026-03-09.01.hard-cutover-action-and-execution-surface.md  2026-03-09.02.shared-protocol-crate-and-final-cleanup.md  2026-03-09.03.collapse-prompt-input-and-translation-layers.md  2026-03-09.04.next-level-built-in-prompt-rendering.md  2026-03-11.00.session-setup-and-capability-registry-boundaries.md  2026-03-11.01.capability-domain-contract-redesign.md
docs/todos/: 2026-03-09.00.redesign-entire-agent-harness.md  2026-03-09.01.rework-agent-prompt-and-session-context-model.md  2026-03-09.02.implement-stable-prefix-prompt-inputs-and-turn-snapshot.md  2026-03-09.03.rework-prompt-assembly-to-stable-prefix-and-event-transcript.md  2026-03-09.04.implement-execution-batch-and-detached-event-model.md  2026-03-09.05.rebuild-compaction-from-authoritative-state-and-add-rework-tests.md  2026-03-09.06.audit-and-retire-unused-or-legacy-code-paths.md  2026-03-09.07.hard-cutover-to-action-and-execution-surface.md  2026-03-09.08.create-shared-fathom-protocol-crate-and-finish-action-only-naming-cleanup.md  2026-03-09.09.introduce-promptinput-promptevent-and-compiledprompt-contracts.md  2026-03-09.10.move-prompt-preparation-out-of-prompt-compiler.md  2026-03-09.11.replace-promptassembler-with-real-promptcompiler-and-submodules.md  2026-03-09.12.delete-turnsnapshot-prompt-residue-and-refresh-prompt-tests.md  2026-03-09.13.design-event-transcript-rendering-upgrade.md  2026-03-09.14.rewrite-harness-contract-as-rich-markdown-block.md  2026-03-09.15.render-identity-envelope-as-markdown-material.md  2026-03-09.16.polish-session-baseline-markdown-rendering-without-changing-transcript-behavior.md  2026-03-09.17.render-participant-envelope-as-markdown-material.md  2026-03-09.18.realign-harness-contract-prompt-with-finalized-response-vs-execution-structure.md
envs/fathom-capability-domain-brave-search/: Cargo.toml  README.md
envs/fathom-capability-domain-fs/: Cargo.toml  README.md
envs/fathom-capability-domain-jina/: Cargo.toml  README.md
envs/fathom-capability-domain-jina/src/: execute.rs  jina_read_url.rs  lib.rs  validate.rs
envs/fathom-capability-domain-jina/src/execute/: http.rs  result.rs  tests.rs
envs/fathom-capability-domain-shell/: Cargo.toml  README.md
envs/fathom-capability-domain-shell/src/: constants.rs  execute.rs  lib.rs  shell_run.rs  validate.rs
envs/fathom-capability-domain-shell/src/execute/: error.rs  path.rs  result.rs  tests.rs
envs/fathom-env-brave-search/: Cargo.toml  README.md
envs/fathom-env-fs/: Cargo.toml  README.md
envs/fathom-env-jina/: Cargo.toml  README.md
envs/fathom-env-shell/: Cargo.toml  README.md
fathom/: Cargo.toml
fathom-capability-domain/: Cargo.toml
fathom-capability-domain/src/: action.rs  capability_domain.rs  lib.rs  naming.rs  outcome.rs
fathom-client/: Cargo.toml  build.rs
fathom-client/src/: commands.rs  lib.rs  runtime.rs  tabs.rs  tui.rs  util.rs  view.rs
fathom-client/src/commands/: execute.rs  heartbeat.rs  parse.rs  registry.rs  spec.rs
fathom-client/src/tabs/: conversation.rs  events.rs  events_executions.rs  events_full.rs  events_tools.rs  running_executions.rs  running_tasks.rs
fathom-env/: Cargo.toml
fathom-env/src/: action.rs  environment.rs  lib.rs  naming.rs
fathom-protocol/: Cargo.toml
fathom-protocol/src/: labels.rs  lib.rs
fathom-server/: Cargo.toml  build.rs
fathom-server/.fathom/diagnostics/sessions/session-1/: events.jsonl
fathom-server/src/: agent.rs  capability_domain.rs  environment.rs  fs.rs  history.rs  lib.rs  policy.rs  profile_material.rs  runtime.rs  service.rs  session.rs  system_capability_domain.rs  system_env.rs  system_tools.rs  tests.rs  util.rs
fathom-server/src/agent/: action_catalog.rs  model_adapter.rs  openai.rs  prompt.rs  prompt_assembler.rs  prompt_input_builder.rs  retry.rs  tool_catalog.rs  tool_registry.rs  tools.rs  types.rs
fathom-server/src/agent/prompt/: chunking.rs  compaction.rs  diagnostics.rs  render.rs  tests.rs  timeline.rs  util.rs
fathom-server/src/agent/tools/: catalog.rs  schema.rs  validate.rs
fathom-server/src/capability_domain/: actor.rs  bootstrap.rs  registry.rs  system.rs
fathom-server/src/capability_domain/system/: common.rs  describe_capability_domain.rs  get_context.rs  get_execution.rs  get_execution_payload.rs  get_profile.rs  get_session_identity_map.rs  get_time.rs  list_executions.rs  list_profiles.rs  payload.rs  read_execution_input.rs  read_execution_result.rs  service.rs
fathom-server/src/environment/: actor.rs  host.rs  registry.rs  system.rs
fathom-server/src/environment/system/: common.rs  describe_environment.rs  get_context.rs  get_execution_payload.rs  get_profile.rs  get_session_identity_map.rs  get_task_payload.rs  get_time.rs  list_profiles.rs
fathom-server/src/fs/: managed.rs  path.rs  real.rs  result.rs
fathom-server/src/history/: compaction.rs  constants.rs  preview.rs  schema.rs  transform.rs
fathom-server/src/policy/: system.rs
fathom-server/src/runtime/: context_snapshot.rs  diagnostics.rs  ids.rs  invocation_context.rs  profiles.rs  session_setup.rs  sessions.rs  system_inspection.rs  time_context.rs  workspace.rs
fathom-server/src/session/: diagnostics.rs  engine.rs  execution_context.rs  inspection.rs  payload_lookup.rs  state.rs  task_context.rs  task_tools.rs
fathom-server/src/session/engine/: action_dispatch.rs  actor.rs  assistant_stream.rs  delta_transport.rs  events.rs  history_flush.rs  profiles.rs  tasks.rs  tool_dispatch.rs  turn.rs
fathom-server/src/session/engine/turn/: coordinator.rs  invocation.rs  journal.rs  types.rs
fathom-server/src/system_capability_domain/: capability_domains.rs  context.rs  executions.rs
fathom-server/src/system_env/: context.rs  environments.rs  executions.rs  profiles.rs  tasks.rs
fathom-server/src/system_tools/: context.rs  profiles.rs
fathom-tooling/: Cargo.toml
fathom/src/: main.rs
(+79 files in other folders)
