[workspace]
members = [
    "fathom-server",
    "fathom-client",
    "fathom",
    "fathom-tooling",
    "tools/fathom-tools-fs",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
fathom-tooling = { path = "fathom-tooling" }
fathom-tools-fs = { path = "tools/fathom-tools-fs" }
futures-util = "0.3"
prost = "0.14"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
