[workspace]
members = [
    "fathom-server",
    "fathom-client",
    "fathom",
    "fathom-env",
    "envs/fathom-env-fs",
    "envs/fathom-env-shell",
    "envs/fathom-env-brave-search",
    "envs/fathom-env-jina",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
fathom-env = { path = "fathom-env" }
fathom-env-brave-search = { path = "envs/fathom-env-brave-search" }
fathom-env-fs = { path = "envs/fathom-env-fs" }
fathom-env-jina = { path = "envs/fathom-env-jina" }
fathom-env-shell = { path = "envs/fathom-env-shell" }
futures-util = "0.3"
glob = "0.3"
prost = "0.14"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
