[workspace]
members = [
    "fathom-protocol",
    "fathom-server",
    "fathom-client",
    "fathom",
    "fathom-capability-domain",
    "envs/fathom-capability-domain-fs",
    "envs/fathom-capability-domain-shell",
    "envs/fathom-capability-domain-brave-search",
    "envs/fathom-capability-domain-jina",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
fathom-capability-domain = { path = "fathom-capability-domain" }
fathom-capability-domain-brave-search = { path = "envs/fathom-capability-domain-brave-search" }
fathom-capability-domain-fs = { path = "envs/fathom-capability-domain-fs" }
fathom-capability-domain-jina = { path = "envs/fathom-capability-domain-jina" }
fathom-capability-domain-shell = { path = "envs/fathom-capability-domain-shell" }
fathom-protocol = { path = "fathom-protocol" }
futures-util = "0.3"
glob = "0.3"
prost = "0.14"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
