[package]
name = "fathom-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
fathom-protocol.workspace = true
ratatui.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
serde_json.workspace = true
