[package]
name = "fathom-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fathom-env.workspace = true
fathom-env-brave-search.workspace = true
fathom-env-fs.workspace = true
fathom-env-jina.workspace = true
fathom-env-shell.workspace = true
fathom-protocol.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
