[package]
name = "fathom-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fathom-capability-domain.workspace = true
fathom-capability-domain-brave-search.workspace = true
fathom-capability-domain-fs.workspace = true
fathom-capability-domain-jina.workspace = true
fathom-capability-domain-shell.workspace = true
fathom-protocol.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
