[package]
name = "fathom-capability-domain-jina"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
fathom-capability-domain.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
