[package]
name = "fathom-capability-domain-shell"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
fathom-capability-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "time"] }
